// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should generate colors 1`] = `
Array [
  Object {
    "fill": "hsl(0, 0%, 0%)",
    "name": "1",
  },
  Object {
    "fill": "hsl(30, 0%, 0%)",
    "name": "2",
  },
]
`;

exports[`Should generate colors, with custom options 1`] = `
Array [
  Object {
    "fill": "hsl(210, 65.4%, 20.4%)",
    "name": "1",
  },
  Object {
    "fill": "hsl(247.5, 65.4%, 20.4%)",
    "name": "2",
  },
  undefined,
  Object {
    "fill": "hsl(322.5, 65.4%, 20.4%)",
    "name": "3",
  },
]
`;
